Mejora en el navbar

--- a/templates/evaluacion.html
+++ b/templates/evaluacion.html
@@ -14,8 +14,9 @@
             <p>Kwan <br>Psychology</p>
         </div>
         <div class="nav-links">
+            <a href="index.html">Inicio</a>
             <a href="nosotros.html">¿Quienes Somos?</a>
-            <a href="evaluacion.html">Resutados</a>
+            <a href="evaluacion.html">Evaluacion</a>
             <a href="contacto.html">Contactenos</a>
         </div>
         <a href="#" class="btn-signup">Donaciones</a>
