--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="container">
         <h1>Conocete mejor con<br> nuestra rueda de la vida</h1>
-        <p>¡Docenas de usuarios han hecho este test para mejorar su desarrollo personal con excelentes resultados!</p>
+        <p class="texto">¡Docenas de usuarios han hecho este test para mejorar su desarrollo personal con excelentes resultados!</p>
         <a href="evaluacion.html" class="btn">Comenzar</a>
         <p class="footer">¿Qué esperas?</p>
     </div>
