--- a/css/contacto.css
+++ b/css/contacto.css
@@ -29,11 +29,11 @@ body {
 }
 .navbar .nav-links a {
     text-decoration: none;
-    color: #000;
+    color: #ff5733;
     font-weight: 550;
 }
 .navbar .btn-signup {
-    background-color: #000;
+    background-color: #ff5733;
     color: white;
     padding: 8px 16px;
     text-decoration: none;
@@ -48,16 +48,21 @@ body {
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #000;
+    color: #ff5733;
 }
 p {
     font-size: 1rem;
     color: #333;
     margin-bottom: 20px;
 }
-.btn {
+.logito {
+  font-size: 1rem;
+  color: #ff5733;
+  margin-bottom: 20px;
+}
+.navbar .btn-signup{
     display: inline-block;
-    background-color: #2674F3;
+    background: linear-gradient(to right, #FA812F, #FA4032);
     color: white;
     padding: 12px 24px;
     text-decoration: none;
