--- a/css/evaluacion.css
+++ b/css/evaluacion.css
@@ -29,11 +29,11 @@ body {
 }
 .navbar .nav-links a {
     text-decoration: none;
-    color: #000;
+    color:  #ff5733;
     font-weight: 550;
 }
 .navbar .btn-signup {
-    background-color: #000;
+    background-color: #ff5733;
     color: white;
     padding: 8px 16px;
     text-decoration: none;
@@ -52,12 +52,19 @@ h1 {
 }
 p {
     font-size: 1rem;
-    color: #333;
+    color: #000;
     margin-bottom: 20px;
 }
-.btn {
+.logito {
+    font-size: 1rem;
+    color: #ff5733;
+    margin-bottom: 20px;
+}
+
+.navbar .btn-signup{
+
     display: inline-block;
-    background-color: #2674F3;
+    background: linear-gradient(to right, #FA812F, #FA4032);
     color: white;
     padding: 12px 24px;
     text-decoration: none;
@@ -69,33 +76,63 @@ p {
 .btn:hover {
     background-color: #1C5BC0;
 }
-.footer {
-    margin-top: 20px;
-    font-size: 0.9rem;
-    color: #666;
+
+
+/* FORM */
+
+.life-wheel-container {
+    max-width: 500px;
+    margin: 2rem auto;
 }
+
 .card {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-}
-.form-control {
-    border-radius: 8px;
-    transition: all 0.3s ease-in-out;
-}
-.form-control:focus {
-    border-color: #ff5e62;
-    box-shadow: 0px 0px 8px rgba(255, 94, 98, 0.5);
-}
-.btn-custom {
     border: none;
-    padding: 10px 15px;
-    border-radius: 8px;
-    font-size: 16px;
-    transition: all 0.3s ease;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
 }
-.btn-custom:hover {
-    background: #e94e50;
-    transform: scale(1.05);
+
+.card-header {
+    background: linear-gradient(to right, #FAB12F, #FA812F);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
+
+.form-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.form-label {
+    color: #FA4032;
+    font-weight: bold;
+    margin-right: 15px;
+    width: 200px;
+    text-align: right;
+}
+
+.form-control {
+    border: 2px solid #FA812F;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 1rem;
+    text-align: center;
+    background-color: rgba(250, 129, 47, 0.05);
+    width: 200px;
+}
+
+.btn-custom {
+    background: linear-gradient(to right, #FA812F, #FA4032);
+    color: white;
+    border: none;
+    padding: 15px;
+    font-weight: bold;
+    border-radius: 10px;
+    margin-bottom: 10px
+}
+
+
