--- a/css/index.css
+++ b/css/index.css
@@ -29,16 +29,20 @@ body {
 }
 .navbar .nav-links a {
     text-decoration: none;
-    color: #000;
+    color: #ff5733;
     font-weight: 550;
 }
 .navbar .btn-signup {
-    background-color: #000;
+    background: linear-gradient(to right, #FA812F, #FA4032);
     color: white;
     padding: 8px 16px;
     text-decoration: none;
     border-radius: 20px;
     font-weight: 700;
+}
+
+.btn{
+    background: linear-gradient(to right, #FA812F, #FA4032);
 }
 .container {
     max-width: 600px;
@@ -48,16 +52,22 @@ body {
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #000;
+    color: #ff5733;
 }
 p {
     font-size: 1rem;
-    color: #333;
+    color: #ff5733;
+    margin-bottom: 20px;
+}
+
+.texto{
+    font-size: 1rem;
+    color: black;
     margin-bottom: 20px;
 }
 .btn {
     display: inline-block;
-    background-color: #2674F3;
+    background-color: #ff5733;
     color: white;
     padding: 12px 24px;
     text-decoration: none;
@@ -67,7 +77,7 @@ p {
     margin-top: 10px;
 }
 .btn:hover {
-    background-color: #1C5BC0;
+    background-color: #ff5750;
 }
 .footer {
     margin-top: 20px;
