--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="logo">
             <img src="../images/logo.png" alt="Kwan Psychology">
-            <p>Kwan <br>Psychology</p>
+            <p class="logito">Kwan <br>Psychology</p>
         </div>
         <div class="nav-links">
             <a href="index.html">Inicio</a>
